# kayak

./: AGENTS.md  Dockerfile.single  README.md  arch.md  docker-compose.yml  principles.md  task_plan.md  技术可行性评估_执行摘要.md  技术可行性评估报告.md
kayak-backend/: .env.example  .gitignore  .tarpaulin.toml  Cargo.toml  sqlite::memory:  sqlite::memory:-shm  sqlite::memory:-wal  sqlite:file:0ce27b92-ec18-4c99-acc3-118c8ebe3071?mode=memory&cache=shared-shm  sqlite:file:0ce27b92-ec18-4c99-acc3-118c8ebe3071?mode=memory&cache=shared-wal  sqlite:file:97dc4c7f-9d98-4120-a114-2e65dc51fa38?mode=memory&cache=shared-shm  sqlite:file:97dc4c7f-9d98-4120-a114-2e65dc51fa38?mode=memory&cache=shared-wal
kayak-backend/coverage/: cobertura.xml  tarpaulin-report.html
kayak-backend/examples/: gen_hash.rs
kayak-backend/migrations/: 20250315000001_create_users_table.sql  20250315000002_create_workbenches_table.sql  20250315000003_create_devices_table.sql  20250315000004_create_points_table.sql  20250315000005_create_data_files_table.sql  20250315000006_create_updated_at_triggers.sql  20250315000007_create_experiments_table.sql  20250401000001_create_methods_table.sql  20260402000001_add_state_change_logs.sql  20260406000001_seed_admin_user.sql  20260510233248_create_teams_table.sql  20260510233249_create_team_members_table.sql  20260510233250_create_team_invitations_table.sql  20260510233251_add_experiment_ownership.sql  20260511000005_add_methods_ownership.sql  20260511000006_normalize_workbench_owner_type.sql  20260511000007_add_invitations_partial_index.sql
kayak-backend/src/: lib.rs  main.rs  state_machine.rs
kayak-backend/src/api/: mod.rs  routes.rs
kayak-backend/src/api/handlers/: common.rs  device.rs  experiment.rs  experiment_control.rs  health.rs  (+9 more)
kayak-backend/src/auth/: dtos.rs  error.rs  handlers.rs  mod.rs  services.rs  traits.rs  user_repo_adapter.rs
kayak-backend/src/core/: config.rs  error.rs  log.rs  mod.rs  result.rs
kayak-backend/src/db/: connection.rs  mod.rs
kayak-backend/src/drivers/: core.rs  error.rs  factory.rs  lifecycle.rs  manager.rs  mod.rs  virtual.rs  wrapper.rs
kayak-backend/src/engine/: adapter.rs  executor.rs  listener.rs  mod.rs  step_engine.rs  types.rs
kayak-backend/src/models/: mod.rs
kayak-backend/src/services/: lttb.rs  method_service.rs  mod.rs  user_repo_adapter.rs
kayak-backend/src/test_utils/: fixtures.rs  mocks.rs  mod.rs
kayak-backend/tests/: experiment_control_test.rs  team_management_test.rs
kayak-backend/tests/integration/: user_workflow_test.rs
kayak-backend/tests/repository/: workbench_repo_test.rs
kayak-python-client/: .gitignore  README.md  pyproject.toml
kayak-python-client/examples/: basic_usage.py
kayak-python-client/kayak/: __init__.py  auth.py  client.py  exceptions.py  http_client.py  models.py  protocols.py  utils.py
kayak-python-client/kayak/resources/: __init__.py  base.py  data.py  devices.py  experiments.py  methods.py  workbenches.py
kayak-python-client/tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_concurrent.py  test_data_conversion.py  test_data_download.py  test_errors.py  test_resources.py  test_validation.py
(+710 files in other folders)
