[package]
name = "kayak-backend"
version = "0.1.0"
edition = "2021"
authors = ["Kayak Team"]
default-run = "kayak-backend"
description = "Kayak Scientific Research Support Platform - Backend API"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["tokio", "http1", "http2", "ws"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "fmt", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "compression-full", "fs"] }
tower = { version = "0.4", features = ["full"] }

# Configuration
config = "0.14"

# Time
time = { version = "0.3", features = ["formatting", "local-offset"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Async trait
async-trait = "0.1"

# Async futures
futures = "0.3"
futures-util = "0.3"

# Serial port support for Modbus RTU
serialport = "4.6"
tokio-serial = "5.4"

# HDF5 support
hdf5 = "0.8"

# Random number generation
rand = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# TOML config file parsing
toml = "0.8"

# Expression evaluation
evalexpr = "10"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
ndarray = "0.15.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "modbus-simulator"
path = "src/bin/modbus-simulator/main.rs"

[profile.dev]
opt-level = 0
debug = true
