[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kayak-python-client"
version = "0.1.0"
description = "Python SDK for Kayak scientific research platform"
authors = ["Kayak Team <team@kayak.local>"]
readme = "README.md"
packages = [{include = "kayak"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.27,<1.0"
pydantic = ">=2.0,<3.0"
h5py = ">=3.10,<4.0"
typing-extensions = ">=4.0"

[tool.poetry.extras]
pandas = ["pandas"]
numpy = ["numpy"]
all = ["pandas", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-httpx = "^0.30"
freezegun = "^1.0"
mypy = "^1.0"
ruff = "^0.4"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
